--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="variable.scss">
+
 </head>
 
 <body>
@@ -21,41 +22,48 @@
             <div class="detail__info">
                 <div class="info">
                     <label for="">Họ tên</label>
-                    <input type="text">
+                    <input type="text" id="fullname">
                 </div>
+                <span id="fullname--error"></span>
+
 
                 <div class="info">
                     <label for="">Email</label>
-                    <input type="text">
+                    <input type="text" id="email">
                 </div>
+                <span id="mail--error"></span>
+
 
                 <div class="info">
                     <label for="">SĐT</label>
-                    <input type="text">
+                    <input type="text" id="phone">
                 </div>
+                <span id="phone--error"></span>
+
 
                 <div class="info">
                     <label for="">Địa chỉ</label>
-                    <input type="text">
+                    <input type="text" id="addr">
                 </div>
+                <span id="addr--error"></span>
 
 
                 <div class="gender">
                     <label for="">Giới tính</label>
                     <div class="gender--item">
                         <div class="g--item">
-                            <input type="radio">
+                            <input type="radio" name="gender" value="nam" id="male">
                             <label for="">Nam</label>
                         </div>
 
                         <div class="g--item">
-                            <input type="radio">
+                            <input type="radio" name="gender" value="nữ" id="female">
                             <label for="">Nữ</label>
                         </div>
 
                     </div>
                 </div>
-                <button>Lưu lại </button>
+                <button onclick="save()">Lưu lại </button>
             </div>
         </div>
         <div class="studensList">
@@ -106,7 +114,8 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
