code delete students

--- a/index.html
+++ b/index.html
@@ -89,20 +89,8 @@
             <h2>Danh sách sinh viên</h2>
             <div class="detail__list">
                 <table class="table table-hover table-striped table-bordered">
-                    <thead>
-                        <tr class="info">
-                            <th>#</th>
-                            <th>Họ và tên</th>
-                            <th>Email</th>
-                            <th>Phone</th>
-                            <th>Address</th>
-                            <th>Gender</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody id="list--students">
-
-                    </tbody>
+                    <thead></thead>
+                    <tbody id="list--students"></tbody>
                 </table>
             </div>
         </div>
