--- a/index.html
+++ b/index.html
@@ -73,13 +73,20 @@
 
                 <div class="info">
                     <label for="">Mật khẩu</label>
-                    <input type="password" id="password" placeholder="********">
+                    <div class="pass">
+                        <input type="password" class="active" id="password" placeholder="********">
+                        <i class="far fa-eye-slash" id="eye"> </i>
+                    </div>
+
                 </div>
                 <span id="pass--error"></span>
 
                 <div class="info">
                     <label for="">Nhập lại mật khẩu</label>
-                    <input type="password" id="repassword" placeholder="********">
+                    <div class="repass">
+                        <input type="password" class="active" id="repassWord" placeholder="********">
+                        <i class="far fa-eye-slash" id="eye--close"></i>
+                    </div>
                 </div>
                 <span id="repass--error"></span>
 
