--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="Assets/img/hotgirl.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="variable.scss">
@@ -120,8 +121,8 @@
 
                     <div class="search">
                         <span>Search &nbsp;</span>
-                        <input type="text">
-                        <button><i class="fas fa-search"></i></button>
+                        <input type="text" id="search--input">
+                        <button><i class="fas fa-search" id="search"></i></button>
                     </div>
 
 
@@ -242,6 +243,7 @@
             </div>
         </div>
     </div>
+    <div id="test"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
     <script src="js/main.js"></script>
 
