--- a/index.html
+++ b/index.html
@@ -245,11 +245,19 @@
     </div>
 
     <h4 style="width: 90%; margin: auto; margin-top: 30px;">DANH SÁCH KHOÁ HỌC</h4>
-    <div id="test">
+    <div id="list--courses">
     </div>
 
     <h4 style="width: 90%; margin: auto; margin-top: 30px;">THÊM KHOÁ HỌC</h4>
     <div id="Add--Courses">
+        <div class="fields--info">
+            <label for="">Chọn ảnh</label>
+            <div class="file">
+                <input type="file" name="file" class="custom-file">
+                <i class="fas fa-upload"></i>
+            </div>
+        </div>
+
         <div class="fields--info">
             <label for="">Name</label>
             <input type="text" name="name" class="course-name-">
