--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
 
-<body onload="renderListStudents()">
-    <h3 style="width: 90%; margin: 15px auto; color: orange;">QUẢN LÝ SINH VIÊN</h3>
+<body onload="renderListStudents()" style="background: rgb(218, 218, 218);">
+    <h4 style="width: 90%; margin: 15px auto; color: rgb(90, 21, 250);">QUẢN LÝ SINH VIÊN</h4>
     <div class="containerMain">
         <div class="studensInfo">
             <h2>Thông tin sinh viên</h2>
@@ -244,11 +244,7 @@
         </div>
     </div>
 
-    <h4 style="width: 90%; margin: auto; margin-top: 30px;">DANH SÁCH KHOÁ HỌC</h4>
-    <div id="list--courses">
-    </div>
-
-    <h4 style="width: 90%; margin: auto; margin-top: 30px;">THÊM KHOÁ HỌC</h4>
+    <h4 style="width: 90%; margin: auto; margin-top: 30px;">QUẢN LÝ KHOÁ HỌC</h4>
     <div id="Add--Courses">
         <div class="fields--info">
             <label for="">Chọn ảnh</label>
@@ -269,6 +265,10 @@
         </div>
         <button id="create">Thêm</button>
         <button id="update" style="display:none">Update</button>
+    </div>
+
+    <h4 style="width: 90%; margin: auto; margin-top: 30px;">DANH SÁCH KHOÁ HỌC</h4>
+    <div id="list--courses">
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
