--- a/index.html
+++ b/index.html
@@ -244,26 +244,28 @@
         </div>
     </div>
 
-    <h4 style="width: 90%; margin: auto; margin-top: 30px;">QUẢN LÝ KHOÁ HỌC</h4>
+    <h4 style="width: 90%; margin: auto; margin-top: 30px;">THÊM KHOÁ HỌC</h4>
     <div id="Add--Courses">
-        <div class="fields--info">
+        <!-- <div class="fields--info">
             <label for="">Chọn ảnh</label>
             <div class="file">
                 <input type="file" name="file" class="custom-file">
                 <i class="fas fa-upload"></i>
             </div>
-        </div>
+        </div> -->
 
         <div class="fields--info">
-            <label for="">Name</label>
+            <label for="">Tên khoá học</label>
             <input type="text" name="name" class="course-name-">
         </div>
 
         <div class="fields--info">
-            <label for="">Description</label>
+            <label for="">Mô tả</label>
             <input type="text" name="description" class="course-description-">
         </div>
-        <button id="create">Thêm</button>
+        <div class="module">
+            <button id="create">Thêm</button>
+        </div>
         <button id="update" style="display:none">Update</button>
     </div>
 
